k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bste-frontend-svc
  namespace: bste-production
spec:
  type: ClusterIP
  selector:
    app: bste-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bste-backend-svc
  namespace: bste-production
spec:
  type: ClusterIP
  selector:
    app: bste-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
