k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bste-ingress
  namespace: bste-production
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - bste.edu.pk
        - www.bste.edu.pk
        - api.bste.edu.pk
      secretName: bste-tls-cert
  rules:
    - host: bste.edu.pk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bste-frontend-svc
                port:
                  number: 3000
    - host: api.bste.edu.pk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bste-backend-svc
                port:
                  number: 4000
